--- a/chatbot/parent/templates/student_learning.html
+++ b/chatbot/parent/templates/student_learning.html
@@ -255,7 +255,7 @@ progress#progress2::-moz-progress-bar {
 
 
 <div class="header-container">
-    <h1 style="font-size: 20px;" class="slide-in-left">Student Information</h1>
+    <h1 style="font-size: 20px;" class="slide-in-left">Student Performance</h1>
 </div>
 
 <hr class="slide-in">
